configuration - gateway.connections -> outbound-group per connection
Before this fix we let one outbound group host all connections, hence
round-robin between them, which is a semantic breakage from 1.3

--- a/middleware/example/server/source/example.services.yaml
+++ b/middleware/example/server/source/example.services.yaml
@@ -29,6 +29,9 @@ server:
       # name of the function the service should bind to
       function: casual_example_echo
 
+    - name: casual/example/domain/name
+      function: casual_example_domain_name
+
     - name: casual/example/forward/echo
       function: casual_example_forward_echo
       transaction: auto
