gateway - outbound handle no-entry call reply correctly
outbound now correctly reply no-entry replies, and possible unadvertise
the called service if no other connection has the service

Also: unittest domain process abstraction to be more robust

--- a/middleware/example/server/source/example.services.yaml
+++ b/middleware/example/server/source/example.services.yaml
@@ -55,6 +55,9 @@ server:
     - name: casual/example/lowercase
       function: casual_example_lowercase
 
+    - name: casual/example/forward
+      function: casual_example_forward
+
     - name: casual/example/sleep
       function: casual_example_sleep
 
