--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -139,7 +139,7 @@ domain_unittest_library = LinkLibrary( 'bin/casual-domain-unittest',
     [
         common_archive,
         'casual-common',
-        'casual-unittest',
+        'casual-unittest'
         
     ]
 )
