wrong written cli command gives error in log
* raise std::system_error
* guard logging to std::cerr and log

Approved-by: Fredrik Eriksson

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -117,6 +117,7 @@ casual_common_objectfiles = [
 
     
     make.Compile( 'source/exception/handle.cpp'),
+    make.Compile( 'source/exception/guard.cpp'),
 
     make.Compile( 'source/environment.cpp'),
     make.Compile( 'source/environment/string.cpp'),
