--- a/middleware/plugin/config
+++ b/middleware/plugin/config
@@ -1,12 +1,10 @@
-ngx_addon_name=ngx_http_xatmi_module
-HTTP_MODULES="$HTTP_MODULES ngx_http_xatmi_module"
-NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_xatmi_module.c $ngx_addon_dir/xatmi_handler.c"
-CORE_INCS="$CORE_INCS $CASUAL_BUILD_HOME/middleware/xatmi/include $CASUAL_BUILD_HOME/middleware/http/include"
+ngx_module_name=ngx_http_xatmi_module
+ngx_module_type=HTTP
+ngx_module_srcs="$ngx_addon_dir/$ngx_module_name.c"
+ngx_module_deps="$ngx_addon_dir/helper.h"
+ngx_module_incs="$ngx_addon_dir"
+ngx_module_libs="-L$ngx_addon_dir/bin -lhelper"
 
-platform=`uname`
+. auto/module
 
-if [[ "$platform" -eq "Darwin" ]]; then
-   CORE_LIBS="$CORE_LIBS -L$CASUAL_BUILD_HOME/middleware/xatmi/bin -lcasual-xatmi -L$CASUAL_BUILD_HOME/middleware/http/bin -lcasual-http-inbound-common"
-else
-   CORE_LIBS="$CORE_LIBS -L$CASUAL_BUILD_HOME/middleware/xatmi/bin -Wl,-rpath=$CASUAL_BUILD_HOME/middleware/xatmi/bin -lcasual-xatmi -L$CASUAL_BUILD_HOME/middleware/http/bin -Wl,-rpath=$CASUAL_BUILD_HOME/middleware/http/bin -lcasual-http-inbound-common -Wl,-rpath=$CASUAL_BUILD_HOME/middleware/common/bin"
-fi
+ngx_addon_name=$ngx_module_name
