configuration - better model - all managers supply their configuration
* moved accumulation from user::Model to Model
  A lot better!

  This will also help us to accumulate the current _model state_ when user
  asks for it.

* better internal model - prepare for configuration delivery
  Made sure we keep only relevant configuration within each _manager
  model_.

* service configuration supply
* transaction configuration supply
* transaction - main refactoring - got rid of 'Manager' type
* queue configuration supply
* gateway configuration supply
* domain manager state -> configuration model
* tests with 'all' configuration

--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -43,7 +43,7 @@ install_libs.append(common_library)
 
 manager_archive = make.LinkArchive( 'bin/casual-domain-manager', 
  [
-    make.Compile( 'source/transform.cpp'),
+    make.Compile( 'source/manager/transform.cpp'),
     make.Compile( 'source/manager/ipc.cpp'),
     make.Compile( 'source/manager/task.cpp'),
     make.Compile( 'source/manager/task/create.cpp'),
@@ -186,12 +186,13 @@ install_bins.append( pending_executable)
 domain_unittest_library = make.LinkLibrary( 'bin/casual-domain-unittest',
     [
         make.Compile( 'source/manager/unittest/process.cpp'),
+        make.Compile( 'source/manager/unittest/configuration.cpp'),
     ],
     [
         common_library,
         'casual-common',
-        'casual-unittest'
-        
+        'casual-unittest',
+        'casual-serviceframework',   
     ]
 )
 
