--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -27,7 +27,7 @@ lib_configuration = make.LinkLibrary( 'bin/casual-configuration',
     [
         make.Compile( 'source/common.cpp'),
         make.Compile( 'source/user.cpp'),
-        make.Compile( 'source/user/load.cpp'),
+        make.Compile( 'source/model.cpp'),
         make.Compile( 'source/user/environment.cpp'),
         make.Compile( 'source/model/transform.cpp'),
         make.Compile( 'source/model/load.cpp'),
@@ -72,7 +72,7 @@ make.LinkUnittest( 'bin/test-casual-configuration',
         
         make.Compile( 'unittest/source/resource/test_property.cpp'),
         make.Compile( 'unittest/source/build/test_server.cpp'),
-        make.Compile( 'unittest/source/user/test_accumulate.cpp'),
+        #make.Compile( 'unittest/source/user/test_accumulate.cpp'),
         make.Compile( 'unittest/source/user/test_validate.cpp'),
 
         make.Compile( 'unittest/source/user/test_backward.cpp'),
