build - improved and fixed some build related stuff
* xatmi/extended.h use C-conformant syntax
* improved example/env/casual.env so it uses and exposes less environment variables
* added path to LD_LIBRARY_PATY in example/env/casual.env as a hack until casual-make is fixed
* common/signal.cpp workaround for buggy fold-expression in g++ <= 9.3.1

--- a/middleware/buffer/makefile.cmk
+++ b/middleware/buffer/makefile.cmk
@@ -15,9 +15,7 @@ make.LibraryPaths([
     'bin',
     '../common/bin',
     '../cli/bin',
-    '../xatmi/bin']
-    + make.optional_library_paths()
-    + dsl.paths().library.gtest
+    '../xatmi/bin'] + make.optional_library_paths() + dsl.paths().library.gtest
    )
 
 
