--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -1,18 +1,21 @@
 # Starting point. The cloned casual repo
-# 
-# This environment variable is the only specific casual environment variable
-# needed when building casual (it's used internal to know where to log and stuff 
-# like that)
-export CASUAL_BUILD_HOME=`git rev-parse --show-toplevel`
-export CASUAL_MAKE_HOME=$CASUAL_BUILD_HOME/../casual-make/source
+#
+
+REPOSITORY_ROOT=`git rev-parse --show-toplevel`
+
+# Third party dependencies, if not set we assume the default location
+if [[ -z "${CASUAL_THIRDPARTY}" ]]; then
+  export CASUAL_THIRDPARTY=$REPOSITORY_ROOT/../casual-thirdparty
+fi
+
+# Where casual-make is, if not set we assume the default location
+if [[ -z "${CASUAL_MAKE_HOME}" ]]; then
+  CASUAL_MAKE_HOME=$REPOSITORY_ROOT/../casual-make/source
+fi
 
 # PYTHONPATH so casual-make and other python stuff works
-export PYTHONPATH=$CASUAL_BUILD_HOME/make:$CASUAL_MAKE_HOME:$PYTHONPATH
+export PYTHONPATH=$REPOSITORY_ROOT/make:$CASUAL_MAKE_HOME:$PYTHONPATH
 
-# Third party dependencies.
-if [[ -z "${CASUAL_THIRDPARTY}" ]]; then
-  export CASUAL_THIRDPARTY=$CASUAL_BUILD_HOME/../casual-thirdparty
-fi
 
 # Optional paths. space separated list of paths
 # 
@@ -20,31 +23,38 @@ fi
 # third party libraries, or other platform specific stuff, 
 # in the build-chain.
 # 
-# googletest is added default since it is used a lot
-export CASUAL_MAKE_OPTIONAL_INCLUDE_PATHS=${CASUAL_THIRDPARTY}/googletest/include
-export CASUAL_MAKE_OPTIONAL_LIBRARY_PATHS=${CASUAL_THIRDPARTY}/googletest/bin
+# export CASUAL_MAKE_OPTIONAL_INCLUDE_PATHS=
+# export CASUAL_MAKE_OPTIONAL_LIBRARY_PATHS=
 
-# Setting up PATH. Make sure build-path is "first" so you're sure you're using what you're
-# building
-export PATH=$CASUAL_BUILD_HOME/bin:$CASUAL_MAKE_HOME:$PATH
+export PATH=$CASUAL_MAKE_HOME:$PATH
 
-# So our tools (build-server in particular) finds dependent libs
-export LD_LIBRARY_PATH=$CASUAL_BUILD_HOME/bin:$LD_LIBRARY_PATH
+
+
+# TODO: remove when we've fixed casual-make to use library-paths when running unittest binaries...
+MIDDLEWARE_PATH=$REPOSITORY_ROOT/middleware
+export LD_LIBRARY_PATH=$MIDDLEWARE_PATH/common/bin:$MIDDLEWARE_PATH/buffer/bin:$MIDDLEWARE_PATH/serviceframework/bin:$MIDDLEWARE_PATH/configuration/bin:$MIDDLEWARE_PATH/xatmi/bin:$MIDDLEWARE_PATH/domain/bin:$MIDDLEWARE_PATH/service/bin:$MIDDLEWARE_PATH/transaction/bin:$MIDDLEWARE_PATH/queue/bin:$MIDDLEWARE_PATH/gateway/bin:$LD_LIBRARY_PATH
 
 # CASUAL_HOME - used when "installing", that is, copy all files that make up 
 # the casual product to a specific "place" (this "place" is also used when package 
 # casual to a proper installation)
 #
-export CASUAL_HOME=$HOME/usr/local/casual
+# export CASUAL_HOME=$HOME/usr/local/casual
+
+
+
 
 # Defines what will be logged. 
-# See: $CASUAL_BUILD_HOME/middleware/common/log.md for more information about loggin
-export CASUAL_LOG='(error|warning|information)'
+# See: $REPOSITORY_ROOT/middleware/common/log.md for more information about loggin
+if [[ -z "${CASUAL_LOG}" ]]; then
+  CASUAL_LOG='(error|warning|information)'
+fi
 
 # set the logfile-path (used during build and test)
-if [[ ! -z ${TMPDIR} ]]; then
-  export CASUAL_LOG_PATH=${TMPDIR}/casual/unittest/casual.log
-elif [[ -d "/tmp" ]]; then
-  export CASUAL_LOG_PATH=/tmp/casual/unittest/casual.log
+if [[ -z "${CASUAL_LOG_PATH}" ]]; then
+  if [[ ! -z ${TMPDIR} ]]; then
+    export CASUAL_LOG_PATH=${TMPDIR}/casual/unittest/casual.log
+  elif [[ -d "/tmp" ]]; then
+    export CASUAL_LOG_PATH=/tmp/casual/unittest/casual.log
+  fi
 fi
 
