build - removed 'hack' now when casual-make is doing the right thing

--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -16,7 +16,6 @@ fi
 # PYTHONPATH so casual-make and other python stuff works
 export PYTHONPATH=$REPOSITORY_ROOT/make:$CASUAL_MAKE_HOME:$PYTHONPATH
 
-
 # Optional paths. space separated list of paths
 # 
 # These are used where casual has depdendencies to 
@@ -26,21 +25,14 @@ export PYTHONPATH=$REPOSITORY_ROOT/make:$CASUAL_MAKE_HOME:$PYTHONPATH
 # export CASUAL_MAKE_OPTIONAL_INCLUDE_PATHS=
 # export CASUAL_MAKE_OPTIONAL_LIBRARY_PATHS=
 
+# so we get access to casual-make (and cmk)
 export PATH=$CASUAL_MAKE_HOME:$PATH
-
-
-
-# TODO: remove when we've fixed casual-make to use library-paths when running unittest binaries...
-MIDDLEWARE_PATH=$REPOSITORY_ROOT/middleware
-export LD_LIBRARY_PATH=$MIDDLEWARE_PATH/common/bin:$MIDDLEWARE_PATH/buffer/bin:$MIDDLEWARE_PATH/serviceframework/bin:$MIDDLEWARE_PATH/configuration/bin:$MIDDLEWARE_PATH/xatmi/bin:$MIDDLEWARE_PATH/domain/bin:$MIDDLEWARE_PATH/service/bin:$MIDDLEWARE_PATH/transaction/bin:$MIDDLEWARE_PATH/queue/bin:$MIDDLEWARE_PATH/gateway/bin:$LD_LIBRARY_PATH
 
 # CASUAL_HOME - used when "installing", that is, copy all files that make up 
 # the casual product to a specific "place" (this "place" is also used when package 
 # casual to a proper installation)
 #
 # export CASUAL_HOME=$HOME/usr/local/casual
-
-
 
 
 # Defines what will be logged. 
