http - call::Context prepare for multiplexing and 'http-forward'
* 'http-forward' is not implemented yet...
* common - service::header cleanup
* moved _casual abstraction_ to http/inbound, where it belongs.
* trying to "fix" nginx build
   I think the nginx stuff should also be under http/inbound/ and we
   get rid of thirdparty and middleware/plugin. It's just an
   implementation detail for http/inbound, or rather, should be.

--- a/middleware/http/makefile.cmk
+++ b/middleware/http/makefile.cmk
@@ -33,6 +33,7 @@ install_headers = []
 common_archive = make.LinkArchive( 'bin/casual-http-common',
     [
        make.Compile( 'source/common.cpp'),
+       make.Compile( 'source/code.cpp'),
      ])
 
 common_outbound_archive = make.LinkArchive( 'bin/casual-http-outbound-common',
@@ -46,7 +47,8 @@ common_outbound_archive = make.LinkArchive( 'bin/casual-http-outbound-common',
 
 common_inbound_library = make.LinkLibrary( 'bin/casual-http-inbound-common',
    [
-       make.Compile( 'source/inbound/caller.cpp')
+       make.Compile( 'source/inbound/caller.cpp'),
+       make.Compile( 'source/inbound/call.cpp')
    ],
    [
        'casual-buffer', 
@@ -74,19 +76,22 @@ install_bin.append( target)
 # Unittest
 make.LinkUnittest( 'unittest/bin/test-http',
    [
-    make.Compile( 'unittest/source/outbound/test_model.cpp'),
-    make.Compile( 'unittest/source/outbound/test_transcode.cpp'),
-    make.Compile( 'unittest/source/outbound/test_state.cpp'),
-    make.Compile( 'unittest/source/test_outbound.cpp'),
+        make.Compile( 'unittest/source/outbound/test_model.cpp'),
+        make.Compile( 'unittest/source/outbound/test_transcode.cpp'),
+        make.Compile( 'unittest/source/outbound/test_state.cpp'),
+        make.Compile( 'unittest/source/inbound/test_call.cpp'),
+        make.Compile( 'unittest/source/test_outbound.cpp'),
+        make.Compile( 'unittest/source/test_code.cpp'),
    ],
    [ 
-      common_outbound_archive, 
-      common_archive,
-      'casual-common',
-      'casual-domain-unittest',
-      'casual-unittest',
-      'casual-xatmi',
-      'curl'
+        common_outbound_archive,
+        common_inbound_library,
+        common_archive,
+        'casual-common',
+        'casual-domain-unittest',
+        'casual-unittest',
+        'casual-xatmi',
+        'curl'
    ])  
    
 
