common - service::header cleanup

--- a/middleware/http/makefile.cmk
+++ b/middleware/http/makefile.cmk
@@ -46,7 +46,8 @@ common_outbound_archive = make.LinkArchive( 'bin/casual-http-outbound-common',
 
 common_inbound_library = make.LinkLibrary( 'bin/casual-http-inbound-common',
    [
-       make.Compile( 'source/inbound/caller.cpp')
+       make.Compile( 'source/inbound/caller.cpp'),
+       make.Compile( 'source/inbound/call.cpp')
    ],
    [
        'casual-buffer', 
