configuration - post and edit of configuration added
We restart all managers that has their configuration changed. This will
probably lead to some "noise" if the domain is under load.

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -230,6 +230,7 @@ unittest_objectfiles = [
     make.Compile( 'unittest/source/test_environment.cpp'),
     make.Compile( 'unittest/source/environment/test_variable.cpp'),
     make.Compile( 'unittest/source/environment/test_string.cpp'),
+    make.Compile( 'unittest/source/environment/test_scoped.cpp'),
     
     make.Compile( 'unittest/source/network/test_byteorder.cpp'),
     
