configuration - service manager runtime configuration update
Works somewhat...

The implementation in service::manager::configuration is **way** to
complicated, and I don't think it's actually works in all cases.

We need to make the state and/or the update semantics a lot simpler.
I'm convinced that this is possible, but how is not given, and need
some thoughts...

--- a/middleware/service/makefile.cmk
+++ b/middleware/service/makefile.cmk
@@ -34,7 +34,8 @@ logic_archive = make.LinkArchive( 'bin/casual-service-logic',
    [
    make.Compile( 'source/manager/handle.cpp'),
    make.Compile( 'source/manager/state.cpp'),
-   make.Compile( 'source/transform.cpp'),
+   make.Compile( 'source/manager/transform.cpp'),
+   make.Compile( 'source/manager/configuration.cpp'),
    make.Compile( 'source/common.cpp'),
    make.Compile( 'source/manager/admin/server.cpp'),
    ])
