gateway - respect hops - round-robin on the partition with smallest hops
Hence, we'll only 'route' to the 'nearest' routes for a given service.

This doesn't totally fix all potentially problems for complex
topologies.

--- a/middleware/service/makefile.cmk
+++ b/middleware/service/makefile.cmk
@@ -121,7 +121,8 @@ service_unittest = make.LinkLibrary( 'bin/casual-service-unittest',
         make.Compile( 'source/unittest/utility.cpp'),
     ],
     [ 
-        'casual-common', 
+        'casual-common',
+        'casual-serviceframework',
     ])
 
  
