--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -21,6 +21,7 @@ make.LibraryPaths( [ 'bin',
     '../middleware/xatmi/bin',
     '../middleware/common/bin',
     '../middleware/domain/bin',
+    '../middleware/service/bin',
     '../middleware/queue/bin',
     '../middleware/buffer/bin',
     '../middleware/transaction/bin',
@@ -76,6 +77,7 @@ make.LinkUnittest( 'unittest/bin/test-casual',
       'casual-unittest',
       'casual-mockup-rm',
       'casual-domain-unittest',
+      'casual-service-unittest',
       'casual-configuration',
       'casual-domain-admin-cli',
       'casual-serviceframework',
