xatmi - cobol binding - cleanup where functions are placed

--- a/middleware/xatmi/makefile.cmk
+++ b/middleware/xatmi/makefile.cmk
@@ -38,6 +38,7 @@ lib_xatmi = make.LinkLibrary( 'bin/casual-xatmi',
       make.Compile( 'source/xatmi/server.cpp'),
       make.Compile( 'source/xatmi/executable.cpp'),
       make.Compile( 'source/xatmi/conversation.cpp'),
+      make.Compile( 'source/xatmi/cobol.cpp'),
       make.Compile( 'source/xa.cpp'),
       make.Compile( 'source/tx.cpp'),
 	],
