discovery - discover all known external on _discoverable available event_
Domain A knows set E (which is a set of all needed services/queues in
other domains). When an outbound connection to a new domain is
established, a discovery is made to all outbound connections with the
request of set E.

* discover - refactoring - outbound -> external, inbound -> internal
     inbound/outbound was to hard to intuitive understand and reason about.

Approved-by: Hans  Bergkvist

--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -56,6 +56,7 @@ unittest_object = [
     make.Compile( 'unittest/source/domain/test_transaction.cpp'),
     make.Compile( 'unittest/source/domain/test_gateway.cpp'),
     make.Compile( 'unittest/source/domain/gateway/test_reverse.cpp'),
+    make.Compile( 'unittest/source/domain/gateway/test_discovery.cpp'),
     make.Compile( 'unittest/source/domain/test_service.cpp'),
     make.Compile( 'unittest/source/domain/test_assassinate.cpp'),
     
