--- a/documentation/example/domain/multiple/domainB/domain.env
+++ b/documentation/example/domain/multiple/domainB/domain.env
@@ -4,14 +4,17 @@
 # The following has to be set to match your installation of casual:
 # 
 # CASUAL_HOME
-# PATH  - to include casual binaries
-# LD_LIBRARY_PATH - to include casual libraries
 #
+#
+# With this we can set the following
+#
+export PATH=$CASUAL_HOME/bin:$PATH
+export LD_LIBRARY_PATH=$CASUAL_HOME/lib:$LD_LIBRARY_PATH
 
 #
 # CASUAL_DOMAIN_HOME - this domain
 #
-export CASUAL_DOMAIN_HOME=$HOME/casual/domains/minimal
+export CASUAL_DOMAIN_HOME=$HOME/casual/example/domain/multiple/domainB
 
 #
 # Defines what will be logged.
