--- a/makefile.cmk
+++ b/makefile.cmk
@@ -5,5 +5,6 @@ import casual.middleware.make.api
 
 make.Build( casual.middleware.make.api.paths().thirdparty + '/makefile.cmk')
 
-make.Build('middleware/makefile.cmk')
-make.Build('test/makefile.cmk')
+make.Build( 'documentation/makefile.cmk')
+make.Build( 'middleware/makefile.cmk')
+make.Build( 'test/makefile.cmk')
