--- a/documentation/example/domain/single/domain.env
+++ b/documentation/example/domain/single/domain.env
@@ -4,17 +4,14 @@
 # The following has to be set to match your installation of casual:
 # 
 # CASUAL_HOME
+# PATH  - to include casual binaries
+# LD_LIBRARY_PATH - to include casual libraries
 #
-#
-# With this we can set the following
-#
-export PATH=$CASUAL_HOME/bin:$PATH
-export LD_LIBRARY_PATH=$CASUAL_HOME/lib:$LD_LIBRARY_PATH
 
 #
 # CASUAL_DOMAIN_HOME - this domain
 #
-export CASUAL_DOMAIN_HOME=$HOME/casual/example/domain/multiple/medium/domainA
+export CASUAL_DOMAIN_HOME=$HOME/casual/domains/single
 
 #
 # Defines what will be logged.
