xatm - added initial tests for conversational services.
Still WIP. Some tests disabled bacuse they fail.
There seems to be an old bug related to invalid flags.
Reported as TPESYSTEM instead of TPEINVAL. I have not yet investigated
why. Same problem seems to exist for the tpcall style calls.
Possibly related to the exception raised in Flags::convert().

--- a/middleware/example/server/source/example.services.yaml
+++ b/middleware/example/server/source/example.services.yaml
@@ -69,3 +69,12 @@ server:
 
     - name: casual/example/terminate
       function: casual_example_terminate
+
+    - name: casual/example/conversation2
+      function: casual_example_conversation2
+      transaction: join
+
+    - name: casual/example/conversation2_auto
+      function: casual_example_conversation2
+      transaction: auto
+      
